--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -156,8 +156,9 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\hrule
 \section*{Teaching Education}
 \noindent
+\years{2024--2025}\textsc{Postgraduate Certificate in Academic Practice (PGCAP)} (with certificate). Instructors: Valentina Aparicio (module 1), TBD (module 2). Ongoing. QMUL. London.\\
 \years{2020}\textsc{Research Supervision}. Instructors: Sally Ruane (module 1), Deborah Cartmell (module 2), Meera Warrier (module 3). DMU. Leicester, UK.\\
-\years{2018--2019}\textsc{Learning and Teaching in Higher Education} (with certificate). Instructors: Emma Kennedy (module 1), Alison Gilmour (module 2), Maren Thom (module 2). QMUL. London.\\
+\years{2018--2019}\textsc{Certificate in Learning and Teaching (CILT)} (with certificate). Instructors: Emma Kennedy (module 1), Alison Gilmour (module 2), Maren Thom (module 2). QMUL. London.\\
 \years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
 \years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars} (with certificate). Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
 
@@ -360,6 +361,7 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Journal Articles}
 \noindent
+\years{2024}\textbf{Xambó, A.}, Roma, G. (Accepted). Human-Machine Agencies in Live Coding for Music Performance. \emph{Journal for New Music Research}.\\
 \years{2024}Jawad, K., \textbf{Xambó, A.} (2024). Feminist HCI and Narratives of Design Semantics in DIY Music Hardware. \emph{Frontiers in Communication}, 8:1345124.\\
 \years{2023}\textbf{Xambó, A.} (2023). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2): 276--289.\\
 {\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, 21.1. Online journal.\\
@@ -377,6 +379,7 @@ Total Euro Amount: \euro3,000
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
+{\years{2025}\textbf{Xambó, A.}, Roma, G. (Accepted) ``Building a Dataset of Personal Live Coding Style Using MIRLCaProxy: A Journal of Creative Sonic Exploration under Constraints and Biases''. \emph{Proceedings of the International Conference of Live Coding (ICLC 2025)}. Barcelona, Spain.}\\
 \years{2024} Zheng, S., Del Sette, B.M., Saitis, C., \textbf{Xambó, A.}, Bryan-Kinns, N. (2024) ``Building Sketch-to-Sound Mapping with Unsupervised Feature Extraction and Interactive Machine Learning''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '24)}. Utrecht, The Netherlands.\\
 {\years{2023}Champlin, A., Chicau, J., Corfiel, M., Knotts, S., Marie, M., Saladino, I., \textbf{Xambó, A.} (2023) ``LivecoderA Community Report'' (Community Report Paper). \emph{Proceedings of the International Conference of Live Coding (ICLC 2023)}. Utrecht, The Netherlands.}\\
 {\years{2022}\textbf{Xambó, A.}, Goudarzi, V. (2022) ``The Mobile Audience as a Digital Musical Persona in Telematic Performance''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
@@ -429,7 +432,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Position \& Workshop Papers}
 \noindent
 
-\years{2024} Zheng, S., \textbf{Xambó, A.}, Bryan-Kinns, N. (2024) ``A Mapping Strategy for Interacting with Latent Audio Synthesis Using Artistic Materials''. 2nd International Workshop on eXplainable AI for the Arts (XAIxArts). ACM Creativity and Cognition Conference. Chicago, IL, US.\\
+\years{2024b} Marino, L., \textbf{Xambó, A.} (2024) ``Developing DIY Solar-Powered, Off-Grid Audio Streamers for Forest Soundscapes: Progress and Challenges''. Proceedings of CHIME 2024. OU, Milton Keynes, UK.\\
+\years{2024a} Zheng, S., \textbf{Xambó, A.}, Bryan-Kinns, N. (2024) ``A Mapping Strategy for Interacting with Latent Audio Synthesis Using Artistic Materials''. 2nd International Workshop on eXplainable AI for the Arts (XAIxArts). ACM Creativity and Cognition Conference. Chicago, IL, US.\\
 \years{2020}Fasciani, S., Jensenius, A.R., Støckert, R., \textbf{Xambó, A.} (2020) ``The MCT Portal: An Infrastructure, a Laboratory and a Pedagogical Tool''. Researchers’ Colloquium on Low Latency Streaming in Music Learning and Teaching. Royal Conservatoire of Scotland, Glasgow, UK.\\
 \years{2017}\textbf{Xambó, A.}, Roma, G., Shah, P., Freeman, J., Magerko, B. (2017) “Computational Challenges of Co-creation in Collaborative Music Live Coding: An Outline". 2017 Co-Creation Workshop at the International Conference on Computational Creativity. Atlanta, GA, USA.\\ 
 \years{2012}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a Taxonomy for Video Analysis on Collaborative Musical Tabletops". In \emph{BCS HCI 2012 Workshop on Video Analysis Techniques for HCI}. Birmingham, UK.\\
@@ -459,13 +463,15 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
+\years{2024f} \textsc{Invited Talk (online)} together with Marino, L. (October 23, 2024). "Sensing the Forest: Lessons learned from our artistic-acoustic intervention at the Alice Holt Forest". \emph{Master in Acoustics and Musicology}. Aix-Marseille Université. Marseille, France.\\ 
 \years{2024e} \textsc{Invited Tutorial} (September 3, 2024). "Tutorial \#1 – Design strategies and techniques to better support collaborative, egalitarian and sustainable musical interfaces". \emph{DAFx 24}. University of Surrey. Guildford, UK.\\ 
 \years{2024d} \textsc{Panel Member} (June 13, 2024). "We are the music makers\dots AI \& Music Forum" (Sonar+D) with Anna Xambó (C4DM-QMUL), Magda Polo (UB EKHO), Rob Clouth, Sergi Jordà (UPF), and Thor Magnusson (Intelligent Instruments Lab). Moderated by Günseli Yalcinkaya (Dazed). Curated by Antònia Folguera (Sonar+D). Powered by S+T+Arts.  \emph{AI \& Music Forum}, Sonar Festival, Barcelona, Spain.\\ 
 \years{2024c} \textsc{Invited Talk} (April 24, 2024). "In the search for sound-based music using MIRLCa, a SuperCollider extension for live coding a coral of sounds". \emph{NOTAM SuperCollider Meetup with James Harkins and Anna Xambó}. Online.\\ 
 \years{2024b} \textsc{Panel Member} (April 12, 2024). "The Development and Application of AI in Music" with Dr Anna Xambó Sedó, Dr Geraint A. Wiggins, Dr Oded Ben-Tal and Dr Robin Laney. Moderated by Dr. Sven-Amin Lembke. \emph{Sound of Tomorrow}.  Anglia Ruskin University's Helmore Recital Hall, Cambridge, UK.\\ 
 \years{2024a} \textsc{Invited Talk} (January 24, 2024). "Reflections on the use of CC sounds in creative computing". \emph{Research Forum. CeReNeM: Centre for Research in New Music}. University of Huddersfield. Huddersfield, UK.\\ 
-\years{2023e} \textsc{Panel Member (online)} (December 16, 2023). "AI in performance" with Thor Magnusson, Federico Visi, Anna Xambó. Moderated by Norbert Schnell. \emph{AI in Music - Agency, Performance, Production and Perception}.  University of Music Trossingen/KISS project, Trossingen, Germany / online.\\ 
-\years{2023d} \textsc{Panel Member (online)} (December 15, 2023). "AI and ethics" with Artemi Gioti, Genoël Von Lilienstern, Gerard Roma, Rujing Stacy Huang, Anna Xambó. Moderated by Norman Müller. \emph{AI in Music - Agency, Performance, Production and Perception}.  University of Music Trossingen/KISS project, Trossingen, Germany / online.\\ 
+\years{2023f} \textsc{Panel Member (online)} (December 16, 2023). "AI in performance" with Thor Magnusson, Federico Visi, Anna Xambó. Moderated by Norbert Schnell. \emph{AI in Music - Agency, Performance, Production and Perception}.  University of Music Trossingen/KISS project, Trossingen, Germany / online.\\ 
+\years{2023e} \textsc{Panel Member (online)} (December 15, 2023). "AI and ethics" with Artemi Gioti, Genoël Von Lilienstern, Gerard Roma, Rujing Stacy Huang, Anna Xambó. Moderated by Norman Müller. \emph{AI in Music - Agency, Performance, Production and Perception}.  University of Music Trossingen/KISS project, Trossingen, Germany / online.\\ 
+\years{2023d} \textsc{Invited Talk} (October 25, 2023). "In the search for epistemological cross-pollination between forest research, HCI and SMC". \emph{CHIME network}. Online.\\ 
 \years{2023c} \textsc{Keynote Speaker} (November 14, 2023). "From NIME to NISE: Rethinking the design and evaluation of musical interfaces". \emph{Audio Developer Conference 2023 (ADC23)}. London, UK.\\ 
 \years{2023b} \textsc{Invited Talk/Workshop (online)} (June 7, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Creative Technologies II}. Creative Technologies Master's Program, Film Universität Babelsberg Konrad Wolf, Potsdam, Germany.\\ 
 \years{2023a} \textsc{Invited Talk/Workshop} (March 3, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Introduction to Making Digital Music Instruments
@@ -672,6 +678,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Solo Performances}
 \noindent
 
+\years{2025}\textbf{Xambó, A.} (Accepted). ``Sensing the Alice Holt Forest''. \emph{Proceedings of the International Conference of Live Coding (ICLC 2025)}. Barcelona, Spain.}\\ 
 \years{2023}\textbf{Xambó, A.} (November 30, 2023). ``(un)pack''. \emph{I2MT Inaugural Concert}, University of Nottingham, Nottingham, UK.\\ 
 \years{2023}\textbf{Xambó, A.} (June 14, 2023). ``Ceci n'est pas une usine''. \emph{+RAIN Film Fest}, Universitat Pompeu Fabra/Sonar+D, Barcelona, Spain.\\ 
 \years{2022e}\textbf{Xambó, A.} (November 27, 2022). A live coding session using MIRLCa at ``Performing Critical AI I: feedback, noise, corpus, code''. MusAI conference, Cafe OTO, London, UK.\\
@@ -725,13 +732,13 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \years{2016a} Roma, G., \textbf{Xambó, A.}, Freeman, J. (July 1, 2016). “Do the Buzzer Shake". \emph{ICLI 2016}. St Mary's Church, Kemptown, Brighton, UK.\\
 \years{2012}pulso (Roma, G., \textbf{Xambó, A.}). (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona, Spain.\\
 \years{2004}pulso (Roma, G., \textbf{Xambó, A.}). (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
-\years{2002}b4ng (Roma, G., \textbf{Xambó, A.}, Brugos, Clarens). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. 
+\years{2002}b4ng (Roma, G., \textbf{Xambó, A.}, Brugos, Clarens). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. \\ [0.5cm]%hack
 
 \section*{Mastering (other's work)}
 \noindent
 
 \years{2022}\emph{Ana y las Romanoides (o de las telepatías transaurales)} [FLAC/MP3 files] by Ana María Romano G. Barcelona/Sheffield: Carpal Tunnel.\\
-\years{2018}\emph{Noiselets} [FLAC/MP3 files] by Various Artists (scmute, peterMann, Martin Hug, Faraldo, 0001, Miquel Parera, Urge to Kill). Barcelona: Carpal Tunnel.
+\years{2018}\emph{Noiselets} [FLAC/MP3 files] by Various Artists (scmute, peterMann, Martin Hug, Faraldo, 0001, Miquel Parera, Urge to Kill). Barcelona: Carpal Tunnel. 
 
 \section*{Other Creative Products}
 %\noindent
@@ -757,7 +764,7 @@ Collaborator: Gerard Roma.
 
 \years{2023--present}Sensing the Forest: \href{https://github.com/axambo/sensingtheforest}{github.com/sensingtheforest}.\\
 Role: Concept and implementation.\\
-\years{2022--present}personic: \href{https://github.com/axambo/personic}{github.com/axambo/personic}.\\
+\years{2022--2023}personic: \href{https://github.com/axambo/personic}{github.com/axambo/personic}.\\
 Role: Concept and implementation.\\
 \years{2020--present}MIRLCa: \href{https://github.com/mirlca/code}{github.com/mirlca/code}.\\
 Role: Concept and implementation.\\
@@ -820,7 +827,7 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 \subsection*{Graduate Courses}
 \noindent
 
-\years{09/2024}Course: \emph{ECS742P Interactive Digital Multimedia Techniques}. \# Students: $\sim$10--15. \\
+\years{09/2024}Course: \emph{ECS742P Interactive Digital Multimedia Techniques}. \# Students: $\sim$7. \\
 Master course. Queen Mary University of London, London, UK.\\
 \years{01/2024}Course: \emph{ECS637U/ECS757P Digital Media and Social Networks 2023/24}. \# Students: $\sim$274. \\
 Master/undergraduate course. Queen Mary University of London, London, UK.\\
@@ -977,8 +984,9 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 %\noindent
 
 \subsection*{PhD Students}
-\years{10/2023--present}1st supervisor of Shuoyang Zheng. AIM. C4DM-QMUL.\\
-\years{08/2022--present}2nd supervisor of Sam Topley. DMU.\\
+\years{10/2023--present}1st supervisor of Shuoyang Zheng. Topic: \emph{Visual Explanations for Transparent and Understandable Neural Synthesiser Instruments}. AIM programme. C4DM-QMUL. \\
+\years{10/2023--present}2nd supervisor of Qiaoxi Zhang. Topic: \emph{Multimodal AI for Musical Collaboration in Immersive Environments}. AIM programme. C4DM-QMUL. \\
+\years{08/2022--present}2nd supervisor of Sam Topley. DMU.  Topic: \emph{Craft-Focused Electronic Musical Instrument Building}.\\
 \years{11/2022--12/2023}2nd supervisor of Christopher Cousin. DMU.\\
 \years{04/2022--12/2023}2nd supervisor of Eva Kára. DMU.
 
@@ -990,8 +998,12 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work, we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
 
 \subsection*{Undergraduate Students}
-\years{09/2022--06/2023}Supervision of two L6 undergraduate students in music technology for their \emph{MATT3000 Research Project}: Leon Riley's  ``Leicester-verb: Acoustic footprints of Leicester spaces for creative reverb purposes'' (Technical Research Project) and Ambrose Jnr Nwodoh's ``The `Cocktail Party Effect' -- Exploring selective attention through Auditory Scene Analysis''. DMU. \\
-\years{09/2021--06/2022}Supervision of two L6 undergraduate students in music technology for their \emph{MATT3000 Research Project}: Abbey Young's  ``A Practice-based Analysis of Practical Workshops to Improve Gender Equality in Music Technology Education in the UK'' and Tolu Ikuyinminu's ``Investigating the Positive and Negative Impacts of the `UK Drill' Genre on Generation Z''. DMU.
+\years{10/2024--05/2025}Supervision of Amrina Kaur Virk. Topic: \emph{ADHD-friendly study tool web application}. BSc Creative Computing programme. QMUL. \\
+\years{10/2024--05/2025}Supervision of Ning Liu. Topic: \emph{MEMS microphones: finding the optimal solutions of recording in silent scenarios}. BSc(Eng)FT Electronic Engineering programme. QMUL. \\
+\years{10/2024--05/2025}Supervision of Stanley Raymond Parker. Topic: \emph{Creating an affordable environmental monitoring system for residential use}. BSc Creative Computing programme. QMUL. \\
+\years{10/2024--05/2025}Supervision of Aleksander Skutnik. Topic: \emph{Art, Unplugged: In the search of a sustainable off-grid power solution for immersive art installations}. BSc Computer Science programme. QMUL. \\
+\years{09/2022--06/2023}Supervision of two L6 undergraduate students in music technology for their \emph{MATT3000 Research Project}: Leon Riley's  \emph{Leicester-verb: Acoustic footprints of Leicester spaces for creative reverb purposes} (Technical Research Project) and Ambrose Jnr Nwodoh's ``The `Cocktail Party Effect' -- Exploring selective attention through Auditory Scene Analysis''. DMU. \\
+\years{09/2021--06/2022}Supervision of two L6 undergraduate students in music technology for their \emph{MATT3000 Research Project}: Abbey Young's  \emph{A Practice-based Analysis of Practical Workshops to Improve Gender Equality in Music Technology Education in the UK'}and Tolu Ikuyinminu's \emph{Investigating the Positive and Negative Impacts of the `UK Drill' Genre on Generation Z}. DMU.
 
 \section*{Mentoring}
 \years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
@@ -1000,6 +1012,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Assessment}
 \noindent
 
+\years{12/2024}External PhD examiner for Aliénor Golvet (December 18, 2024). PhD thesis title: \emph{Systèmes Musicaux Distribués: Concevoir des Outils Web pour la Recerche et la Practique Artistique (Distributed Music Systems: Designed Web-based Tools for Artistic Research and Practice)}. Programme: Ecole Doctorale d'Informatique, Télécommunications et Electronique. Sorbonne Université, Paris, France.\\
+\years{09/2024}External PhD examiner for Gabriel Montufar Gangotena (September 19, 2024). PhD thesis title: \emph{A Portfolio of Compositions by Gabriel Montufar}. Department of Music, College of Arts and Law, The University of Birmingham. Birmingham, UK.\\
 \years{08/2024}External PhD examiner for CHEN Manni (August 14, 2024). PhD thesis title: \emph{Between Noise and Structure: Artificial Intelligence and Humans in Music Production}. PhD programme: Creative Media. City University of Hong Kong, Hong Kong.\\
 \years{05/2024}Internal PhD examiner for Elizabeth Wilson (May 7, 2024). PhD thesis title: \emph{Affective Live Coding: Fostering Human-Machine Collaboration with Autonomous Agents}. PhD programme: Media and Arts Technology. C4DM. School of EECS, QMUL, London, UK.\\
 \years{02/2023}External PhD examiner for António Ramires (February 9, 2023). PhD thesis title: \emph{Automatic Characterization and Generation of Music Loops and Instrument Samples for Electronic Music Production}. PhD programme: Horizon 2020 MIP-Frontiers. Music Technology Group, Department of Information and Communication Technologies, Universitat Pompeu Fabra, Barcelona, Spain.\\
@@ -1094,7 +1108,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 
 \subsection*{Conference Academic Chair / Meta-Reviewer / Local Chair}
 \noindent
-\years{2025}\textsc{Conference Papers Co-Chair}. \emph{International Conference on Live Coding} (2025). Barcelona, Spain.\\
+\years{2025}\textsc{Conference Papers Committee Member}. \emph{International Conference on Live Coding} (2025). Barcelona, Spain.\\
 \years{2024}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2024). Utrecht, Netherlands.\\
 \years{2023}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2023). Mexico City, Mexico.\\
 \years{2022}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2022). Auckland, New Zealand.\\
@@ -1149,6 +1163,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Journal Reviewer}
 \noindent
 
+\years{2024b}\emph{Royal Society Open Science}. Royal Society.\\
+\years{2024a}\emph{Journal for New Music Research}. Taylor \& Francis.\\
 \years{2023}\emph{Digital Creativity}. Routledge.\\
 \years{2022}\emph{Personal and Ubiquitous Computing}. Springer.\\
 \years{2019b}\emph{Computer Music Journal}. MIT Press Journals (2019--2020, 2023).\\
@@ -1247,7 +1263,7 @@ Version Control Systems: CVS, Git, Subversion.\\
 Music \& Audio Apps: DAWs (Ableton, Cubase, Live, Logic Pro, Reaper), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio analysis (Audition, Sonic Visualiser, SPEAR), audio measurement \& test (Lindos).\\
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty). Code editors (Atom, Sublime, Visual Studio Code).\\
-Online Learning Platforms: Blackboard, Canvas, Teams.\\
+Online Learning Platforms: Blackboard, Canvas, Moodle, Teams.\\
 Hardware: Arduino, Bela, Lindos, micro:bit, Raspberry Pi.\\
 Circuit simulators: Fritzing, OrCAD, Tinkercad.\\
 Management: MS Project, Trello.
