--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -156,7 +156,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\hrule
 \section*{Teaching Education}
 \noindent
-\years{2024--2025}\textsc{Postgraduate Certificate in Academic Practice (PGCAP)} (with certificate). Instructors: Valentina Aparicio (module 1), TBD (module 2). Ongoing. QMUL. London.\\
+\years{2024--2025}\textsc{Postgraduate Certificate in Academic Practice (PGCAP)} (with certificate). Instructors: Valentina Aparicio/Stephanie Fuller (module 1), Jo Trelfa/Ana Cabral (module 2). Ongoing. QMUL. London.\\
 \years{2020}\textsc{Research Supervision}. Instructors: Sally Ruane (module 1), Deborah Cartmell (module 2), Meera Warrier (module 3). DMU. Leicester, UK.\\
 \years{2018--2019}\textsc{Certificate in Learning and Teaching (CILT)} (with certificate). Instructors: Emma Kennedy (module 1), Alison Gilmour (module 2), Maren Thom (module 2). QMUL. London.\\
 \years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
@@ -222,7 +222,6 @@ Partners: C4DM, QMUL; Music, Technology and Innovation - Institute for Sonic Cre
 %Collaborators: .\\
 Total Pound Amount: \pounds250,000 \\
 
-
 \years{05/2022--06/2022}\textsc{Living in a Digital Society - Spotlight Funding Round 2} \\
 Funding body: DMU. \\
 Project: Development fund for research grant preparation.\\
@@ -258,6 +257,12 @@ Total Euro Amount: \euro3,000
 %Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Collaborator}
+
+\years{01/2025--06/2025}\textsc{Women in Higher Education Network (WHEN)} \\
+Funding body: ERIC Fund second round, QMUL. \\
+Role: Co-chair. \\
+Collaborators: Ekaterina Ivanova (chair).\\
+Total Pound Amount: \pounds7,600 \\
 
 \years{09/2016-08/2020}\textsc{Advancing Informal STEM Learning Grant} \\
 Funding body: National Science Foundation (NSF). \\
@@ -361,7 +366,7 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Journal Articles}
 \noindent
-\years{2024}\textbf{Xambó, A.}, Roma, G. (Accepted). Human-Machine Agencies in Live Coding for Music Performance. \emph{Journal for New Music Research}.\\
+\years{2024}\textbf{Xambó, A.}, Roma, G. (2024). Human-Machine Agencies in Live Coding for Music Performance. \emph{Journal for New Music Research}.\\
 \years{2024}Jawad, K., \textbf{Xambó, A.} (2024). Feminist HCI and Narratives of Design Semantics in DIY Music Hardware. \emph{Frontiers in Communication}, 8:1345124.\\
 \years{2023}\textbf{Xambó, A.} (2023). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2): 276--289.\\
 {\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, 21.1. Online journal.\\
@@ -732,7 +737,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \years{2016a} Roma, G., \textbf{Xambó, A.}, Freeman, J. (July 1, 2016). “Do the Buzzer Shake". \emph{ICLI 2016}. St Mary's Church, Kemptown, Brighton, UK.\\
 \years{2012}pulso (Roma, G., \textbf{Xambó, A.}). (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona, Spain.\\
 \years{2004}pulso (Roma, G., \textbf{Xambó, A.}). (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
-\years{2002}b4ng (Roma, G., \textbf{Xambó, A.}, Brugos, Clarens). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. \\ [0.5cm]%hack
+\years{2002}b4ng (Roma, G., \textbf{Xambó, A.}, Brugos, Clarens). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. %\\ [0.5cm]%hack
 
 \section*{Mastering (other's work)}
 \noindent
@@ -827,8 +832,12 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 \subsection*{Graduate Courses}
 \noindent
 
+\years{01/2025}Course: \emph{ECS637U/ECS757P Digital Media and Social Networks 2024/25}. \# Students: $\sim$206. \\
+Master/undergraduate course. Queen Mary University of London, London, UK.\\
+Role: Module organiser and Lecturer of a 15-credit course with three lecturers, two teaching assistants and 8 demonstrators.\\ 
 \years{09/2024}Course: \emph{ECS742P Interactive Digital Multimedia Techniques}. \# Students: $\sim$7. \\
 Master course. Queen Mary University of London, London, UK.\\
+Role: Lecturer of a 15-credit course with two lecturers and one demonstrator.\\ 
 \years{01/2024}Course: \emph{ECS637U/ECS757P Digital Media and Social Networks 2023/24}. \# Students: $\sim$274. \\
 Master/undergraduate course. Queen Mary University of London, London, UK.\\
 Role: Lecturer of a 15-credit course with two lecturers, two teaching assistants and 8 demonstrators.\\ 
@@ -858,6 +867,9 @@ Role: Creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Undergraduate Courses}
 \noindent
 
+\years{01/2025}Course: \emph{ECS637U/ECS757P Digital Media and Social Networks 2024/25}. \# Students: $\sim$206. \\
+Master/undergraduate course. Queen Mary University of London, London, UK.\\
+Role: Module organiser and Lecturer of a 15-credit course with three lecturers, two teaching assistants and 8 demonstrators.\\ 
 \years{01/2024--04/2024}Course: \emph{ECS637U/ECS757P Digital Media and Social Networks 2023/24}. \# Students: $\sim$274. \\
 Master/undergraduate course. Queen Mary University of London, London, UK.\\
 Role: Lecturer of a 15-credit course with two lecturers, two teaching assistants and 8 demonstrators.\\ 
@@ -986,11 +998,12 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{PhD Students}
 \years{10/2023--present}1st supervisor of Shuoyang Zheng. Topic: \emph{Visual Explanations for Transparent and Understandable Neural Synthesiser Instruments}. AIM programme. C4DM-QMUL. \\
 \years{10/2023--present}2nd supervisor of Qiaoxi Zhang. Topic: \emph{Multimodal AI for Musical Collaboration in Immersive Environments}. AIM programme. C4DM-QMUL. \\
-\years{08/2022--present}2nd supervisor of Sam Topley. DMU.  Topic: \emph{Craft-Focused Electronic Musical Instrument Building}.\\
+\years{08/2022--present}2nd supervisor of Sam Topley. DMU. Topic: \emph{Craft-Focused Electronic Musical Instrument Building}.\\
 \years{11/2022--12/2023}2nd supervisor of Christopher Cousin. DMU.\\
 \years{04/2022--12/2023}2nd supervisor of Eva Kára. DMU.
 
 \subsection*{Master Students}
+\years{01/2025--present}Supervisor of four master students: Xinyue Xu (MSc Sound and Music Computing, Queen Mary University of London); Andrés Sánchez Castrillón (MSc Artificial Intelligence, Queen Mary University of London); Tug O’Flaherty (MSc Sound and Music Computing, Queen Mary University of London); James Shortland (MSc Data Science and Artificial Intelligence, Queen Mary University of London).
 \years{07/2021--10/2021}Creative portfolio \& short dissertation (master thesis) co-supervisor of Harri Bettsworth. Master thesis title: \emph{``Exploring How Uncanny Sound Can Trigger Fear In Video Game''}. Master programme: Music Technology and Innovation, DMU. \\
 \years{01/2020--07/2020}Master thesis supervisor of Karolina Jawad. Master thesis title: \emph{``Gatekeepers by Design? Gender HCI for Audio and Music Hardware''}. Master programme: Music Communication Technology, NTNU. Our publication at ICLI '20 (see Peer-Reviewed Conference Papers) and the work at WoNoMute have inspired this work.\\
 \years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru. Master thesis title: \emph{``Moodscape Generator: Automated Generation of Soundscapes''}. Computer Science, QMUL.\\
@@ -1033,6 +1046,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Concerts Co-Organization}
 \noindent
 
+\years{2024}“IDMT Concert". (December 12, 2024). Performance lab, qMedia Studios, QMUL, London.\\
 \years{2017}“Noiselets: A Noise Music Microfestival". (January 8, 2017). Freedonia, Barcelona.\\
 \years{2016c}“The First Annual Women in Music Tech: Concert and Reception". (November 2, 2016). The Garage. Atlanta, GA, USA.\\
 \years{2016b}“Audience device participation". (April 5, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
@@ -1069,7 +1083,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \noindent
 \emph{EECS Women in Higher Education Network (WHEN), QMUL.}\\
 \emph{Association for Computing Machinery (ACM)}.\\
-\emph{International Computer Music Association (ICMA)}.\\
+\emph{International Computer Music Association (ICMA)}.
 %\emph{Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2})$.}\\
 %\emph{Intersections, Feminism, Technology \& Digital Humanities network (IFTe).}
 
@@ -1108,7 +1122,9 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 
 \subsection*{Conference Academic Chair / Meta-Reviewer / Local Chair}
 \noindent
-\years{2025}\textsc{Conference Papers Committee Member}. \emph{International Conference on Live Coding} (2025). Barcelona, Spain.\\
+\years{2025c}\textsc{Conference Paper Co-Chair}. \emph{Web Audio Conference 2025}. Paris, France.\\ 
+\years{2025b}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2025). The Australian National University, Ngunnawal and Ngambri Country (Canberra), Australia.\\
+\years{2025a}\textsc{Conference Papers Committee Member}. \emph{International Conference on Live Coding} (2025). Barcelona, Spain.\\
 \years{2024}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2024). Utrecht, Netherlands.\\
 \years{2023}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2023). Mexico City, Mexico.\\
 \years{2022}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2022). Auckland, New Zealand.\\
@@ -1165,7 +1181,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 
 \years{2024b}\emph{Royal Society Open Science}. Royal Society.\\
 \years{2024a}\emph{Journal for New Music Research}. Taylor \& Francis.\\
-\years{2023}\emph{Digital Creativity}. Routledge.\\
+\years{2023b}\emph{Organised Sound}. Cambridge University Press (2023--2025).\\
+\years{2023a}\emph{Digital Creativity}. Routledge.\\
 \years{2022}\emph{Personal and Ubiquitous Computing}. Springer.\\
 \years{2019b}\emph{Computer Music Journal}. MIT Press Journals (2019--2020, 2023).\\
 \years{2019a}\emph{Arts}. MDPI.\\
