--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -437,6 +437,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Position \& Workshop Papers}
 \noindent
 
+\years{2025} \textbf{Xambó, A.} (2025) ``Live Coding a Chorale of Sounds Using MIRLCa: State of Affairs and Implications''. \emph{SuperCollider Symposium 2025}. Johns Hopkins University. Washington D.C., USA.\\ 
 \years{2024b} Marino, L., \textbf{Xambó, A.} (2024) ``Developing DIY Solar-Powered, Off-Grid Audio Streamers for Forest Soundscapes: Progress and Challenges''. Proceedings of CHIME 2024. OU, Milton Keynes, UK.\\
 \years{2024a} Zheng, S., \textbf{Xambó, A.}, Bryan-Kinns, N. (2024) ``A Mapping Strategy for Interacting with Latent Audio Synthesis Using Artistic Materials''. 2nd International Workshop on eXplainable AI for the Arts (XAIxArts). ACM Creativity and Cognition Conference. Chicago, IL, US.\\
 \years{2020}Fasciani, S., Jensenius, A.R., Støckert, R., \textbf{Xambó, A.} (2020) ``The MCT Portal: An Infrastructure, a Laboratory and a Pedagogical Tool''. Researchers’ Colloquium on Low Latency Streaming in Music Learning and Teaching. Royal Conservatoire of Scotland, Glasgow, UK.\\
@@ -468,6 +469,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
+\years{2025b} \textsc{Oral Presenter (online)} (March 13, 2025). "Live Coding a Chorale of Sounds Using MIRLCa: State of Affairs and Implications". \emph{SuperCollider Symposium 2025}. Johns Hopkins University. Washington D.C., USA.\\ 
+\years{2025a} \textsc{Invited Talk (online)} (February 28, 2025). "Intersecting Sonic Arts \& Computing: A Portfolio Journey". \emph{Music Engineering Forum}. University of Miami. Miami, FL, USA.\\ 
 \years{2024f} \textsc{Invited Talk (online)} together with Marino, L. (October 23, 2024). "Sensing the Forest: Lessons learned from our artistic-acoustic intervention at the Alice Holt Forest". \emph{Master in Acoustics and Musicology}. Aix-Marseille Université. Marseille, France.\\ 
 \years{2024e} \textsc{Invited Tutorial} (September 3, 2024). "Tutorial \#1 – Design strategies and techniques to better support collaborative, egalitarian and sustainable musical interfaces". \emph{DAFx 24}. University of Surrey. Guildford, UK.\\ 
 \years{2024d} \textsc{Panel Member} (June 13, 2024). "We are the music makers\dots AI \& Music Forum" (Sonar+D) with Anna Xambó (C4DM-QMUL), Magda Polo (UB EKHO), Rob Clouth, Sergi Jordà (UPF), and Thor Magnusson (Intelligent Instruments Lab). Moderated by Günseli Yalcinkaya (Dazed). Curated by Antònia Folguera (Sonar+D). Powered by S+T+Arts.  \emph{AI \& Music Forum}, Sonar Festival, Barcelona, Spain.\\ 
@@ -683,7 +686,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Solo Performances}
 \noindent
 
-\years{2025}\textbf{Xambó, A.} (Accepted). ``Sensing the Alice Holt Forest''. \emph{Proceedings of the International Conference of Live Coding (ICLC 2025)}. Barcelona, Spain.}\\ 
+\years{2025}\textbf{Xambó, A.} (Accepted). ``Sensing the Alice Holt Forest''. \emph{International Conference of Live Coding (ICLC 2025)}. Barcelona, Spain.}\\ 
 \years{2023}\textbf{Xambó, A.} (November 30, 2023). ``(un)pack''. \emph{I2MT Inaugural Concert}, University of Nottingham, Nottingham, UK.\\ 
 \years{2023}\textbf{Xambó, A.} (June 14, 2023). ``Ceci n'est pas une usine''. \emph{+RAIN Film Fest}, Universitat Pompeu Fabra/Sonar+D, Barcelona, Spain.\\ 
 \years{2022e}\textbf{Xambó, A.} (November 27, 2022). A live coding session using MIRLCa at ``Performing Critical AI I: feedback, noise, corpus, code''. MusAI conference, Cafe OTO, London, UK.\\
@@ -771,7 +774,7 @@ Collaborator: Gerard Roma.
 Role: Concept and implementation.\\
 \years{2022--2023}personic: \href{https://github.com/axambo/personic}{github.com/axambo/personic}.\\
 Role: Concept and implementation.\\
-\years{2020--present}MIRLCa: \href{https://github.com/mirlca/code}{github.com/mirlca/code}.\\
+\years{2020--present}MIRLCa: \href{https://github.com/axambo/MIRLCa}{github.com/axambo/MIRLCa} | \href{https://github.com/mirlca/code}{github.com/mirlca/code}.\\
 Role: Concept and implementation.\\
 \years{2019--present}MIRLC 2.0.\\
 Role: Concept and implementation.\\
@@ -1025,6 +1028,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Assessment}
 \noindent
 
+\years{03/2025}Internal PhD examiner for Nicole Robson. PhD thesis title: \emph{Human-Sound Interaction: The Relational Experience of (In)Audible Installation Art}. PhD degree in Media Arts and Technology; School of Electronic Engineering and Computer Science; Queen Mary University of London, UK.\\
 \years{12/2024}External PhD examiner for Aliénor Golvet (December 18, 2024). PhD thesis title: \emph{Systèmes Musicaux Distribués: Concevoir des Outils Web pour la Recerche et la Practique Artistique (Distributed Music Systems: Designed Web-based Tools for Artistic Research and Practice)}. Programme: Ecole Doctorale d'Informatique, Télécommunications et Electronique. Sorbonne Université, Paris, France.\\
 \years{09/2024}External PhD examiner for Gabriel Montufar Gangotena (September 19, 2024). PhD thesis title: \emph{A Portfolio of Compositions by Gabriel Montufar}. Department of Music, College of Arts and Law, The University of Birmingham. Birmingham, UK.\\
 \years{08/2024}External PhD examiner for CHEN Manni (August 14, 2024). PhD thesis title: \emph{Between Noise and Structure: Artificial Intelligence and Humans in Music Production}. PhD programme: Creative Media. City University of Hong Kong, Hong Kong.\\
